fix(login): add margin-bottom to paragraph in login component for better spacing

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -83,6 +83,7 @@
 
       p {
         margin-top: 0;
+        margin-bottom: 8px;
       }
 
       a {
